--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "vue3uni",
-    "appid" : "__UNI__9AAB5E6",
+    "appid" : "__UNI__D6520E5",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
